trying to fix tip's bottom padding on mobile

--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ input:focus::-ms-input-placeholder {
 
 .accordion-section-content span {
     display: block;
+    padding-bottom: 20px;
 }
 
 @media screen and (max-width: 600px), (max-height: 400px) {
@@ -257,7 +258,7 @@ input:focus::-ms-input-placeholder {
     }
 
     .accordion-section-content.active {
-        padding-bottom: 40px;
+        padding-bottom: 20px;
     }
 
 }
